Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="favicon.png" />
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Firebase -->
+  <!-- Firebase v8 (compatível com este JS) -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
@@ -17,13 +17,13 @@
   <!-- Script principal -->
   <script defer src="script.js"></script>
 
-  <!-- Leaflet (mapa interativo) -->
+  <!-- Leaflet (mapa) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
 
 <body>
-  <!-- Ícone do carrinho fixo -->
+  <!-- Ícone do carrinho -->
   <button id="cart-icon" aria-label="Abrir carrinho">🛒 <span id="cart-count">0</span></button>
 
   <!-- Cabeçalho -->
@@ -90,7 +90,7 @@
       <article class="card" data-type="burger" data-id="UAI" data-name="UAI" data-price="13.00">
         <h3>UAI <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 13,00</div>
-        <p>Pão, alface, tomate, milho, bacon, hambúrguer, presunto e mussarela.</p>
+        <p>Pão, alface, tomate, milho, bacon, hambúrguer, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -100,7 +100,17 @@
       <article class="card" data-type="burger" data-id="TREM" data-name="TREM" data-price="14.00">
         <h3>TREM <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 14,00</div>
-        <p>Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, presunto e mussarela.</p>
+        <p>Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">➕ Adicionais</button>
+        </div>
+      </article>
+
+      <article class="card" data-type="burger" data-id="CADIM" data-name="CADIM" data-price="17.00">
+        <h3>CADIM <span class="badge">Com Molho Verde 🌿</span></h3>
+        <div class="price">R$ 17,00</div>
+        <p>Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, filé de frango, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -110,17 +120,17 @@
       <article class="card" data-type="burger" data-id="ARMARIA" data-name="ARMARIA" data-price="18.00">
         <h3>ARMARIA <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 18,00</div>
-        <p>Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, filé de frango, batata palha, presunto e mussarela.</p>
+        <p>Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, filé de frango, batata palha, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
         </div>
       </article>
 
-<article class="card" data-type="burger" data-id="BITELA" data-name="BITELA" data-price="22.00">
+      <article class="card" data-type="burger" data-id="BITELA" data-name="BITELA" data-price="22.00">
         <h3>BITELA <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 22,00</div>
-        <p>Pão, alface, tomate, milho, bacon, salsicha, 2 hambúrgueres, filé de frango, batata palha, presunto e mussarela.</p>
+        <p>Pão, alface, tomate, milho, bacon, salsicha, 2 hambúrgueres, filé de frango, batata palha, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -130,7 +140,27 @@
       <article class="card" data-type="burger" data-id="GRADICIDO" data-name="GRADICIDO" data-price="28.00">
         <h3>GRADICIDO <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 28,00</div>
-        <p>Pão, alface, tomate, milho, bacon, salsicha, 3 hambúrgueres, filé de frango, ovo, batata palha, presunto e mussarela.</p>
+        <p>Pão, alface, tomate, milho, bacon, salsicha, 3 hambúrgueres, filé de frango, ovo, batata palha, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">➕ Adicionais</button>
+        </div>
+      </article>
+
+      <article class="card" data-type="burger" data-id="VARADIFOME" data-name="VARADIFOME" data-price="30.00">
+        <h3>VARADIFOME <span class="badge">Com Molho Verde 🌿</span></h3>
+        <div class="price">R$ 30,00</div>
+        <p>Pão, alface, tomate, milho, bacon, salsicha, 4 hambúrgueres, filé de frango, ovo, batata palha, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">➕ Adicionais</button>
+        </div>
+      </article>
+
+      <article class="card" data-type="burger" data-id="APRUMA" data-name="APRUMA" data-price="25.00">
+        <h3>APRUMA <span class="badge">Com Molho Verde 🌿</span></h3>
+        <div class="price">R$ 25,00</div>
+        <p>Pão, alface, tomate, milho, bacon, salsicha, 3 hambúrgueres, filé de frango, batata palha, presunto e mussarela. <em>Acompanha sachê de ketchup.</em></p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -139,9 +169,77 @@
     </div>
   </section>
 
-  <!-- ======================== -->
+  <!-- Hambúrgueres Artesanais -->
+  <section class="menu-section">
+    <h2>Hambúrgueres Artesanais</h2>
+    <div class="grid">
+      <article class="card" data-type="burger" data-id="PELEJA" data-name="PELEJA" data-price="26.00">
+        <h3>PELEJA <span class="badge">Com Molho Verde 🌿</span></h3>
+        <div class="price">R$ 26,00</div>
+        <p>Pão, alface, tomate, milho, bacon, hambúrguer artesanal 120g, filé de frango, presunto e mussarela.</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">➕ Adicionais</button>
+        </div>
+      </article>
+
+      <article class="card" data-type="burger" data-id="TUDIBOM" data-name="TUDIBOM" data-price="28.50">
+        <h3>TUDIBOM <span class="badge">Com Molho Verde 🌿</span></h3>
+        <div class="price">R$ 28,50</div>
+        <p>Pão, alface, tomate, milho, bacon, 2 hambúrgueres artesanais 120g, filé de frango, presunto e mussarela.</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">➕ Adicionais</button>
+        </div>
+      </article>
+
+      <article class="card" data-type="burger" data-id="CUSTOSO" data-name="CUSTOSO" data-price="31.00">
+        <h3>CUSTOSO <span class="badge">Com Molho Verde 🌿</span></h3>
+        <div class="price">R$ 31,00</div>
+        <p>Pão, alface, tomate, milho, bacon, 2 hambúrgueres artesanais 120g, filé de frango, cheddar cremoso, presunto e mussarela.</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">➕ Adicionais</button>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <!-- Combos -->
+  <section class="menu-section">
+    <h2>Combos</h2>
+    <div class="grid">
+      <article class="card" data-type="combo" data-id="CC_TRAD" data-name="Combo Casal (Tradicional)" data-price="34.99">
+        <h3>Combo Casal (Tradicional)</h3>
+        <div class="price">R$ 34,99</div>
+        <p>2 Hambúrguer Trem + 1 Fanta 1L.</p>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">➕ Adicionais</button></div>
+      </article>
+
+      <article class="card" data-type="combo" data-id="CF_TRAD" data-name="Combo Família (Tradicional)" data-price="59.99">
+        <h3>Combo Família (Tradicional)</h3>
+        <div class="price">R$ 59,99</div>
+        <p>4 Hambúrguer Trem + 1 Kuat 2L.</p>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">➕ Adicionais</button></div>
+      </article>
+
+      <article class="card" data-type="combo" data-id="CC_ART" data-name="Combo Casal (Artesanal)" data-price="54.99">
+        <h3>Combo Casal (Artesanal)</h3>
+        <div class="price">R$ 54,99</div>
+        <p>2 Hambúrguer Peleja + 1 Coca 1L.</p>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">➕ Adicionais</button></div>
+      </article>
+
+      <article class="card" data-type="combo" data-id="CF_ART" data-name="Combo Família (Artesanal)" data-price="79.99">
+        <h3>Combo Família (Artesanal)</h3>
+        <div class="price">R$ 79,99</div>
+        <p>4 Hambúrguer Peleja + 1 Coca 2L.</p>
+        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">➕ Adicionais</button></div>
+      </article>
+    </div>
+  </section>
+
   <!-- Hot Dog’s -->
-  <!-- ======================== -->
   <section class="menu-section">
     <h2>🌭 Hot Dog’s</h2>
     <div class="grid">
@@ -155,10 +253,40 @@
         </div>
       </article>
 
+      <article class="card" data-type="hotdog" data-id="SIMPRAO" data-name="SIMPRÃO" data-price="12.00">
+        <h3>SIMPRÃO <span class="badge">Com Molho Verde 🌿</span></h3>
+        <div class="price">R$ 12,00</div>
+        <p>Pão, molho, salsicha, milho, batata palha, bacon, ketchup e maionese.</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">➕ Adicionais</button>
+        </div>
+      </article>
+
+      <article class="card" data-type="hotdog" data-id="NIMIM" data-name="NIMIM" data-price="13.00">
+        <h3>NIMIM <span class="badge">Com Molho Verde 🌿</span></h3>
+        <div class="price">R$ 13,00</div>
+        <p>Pão, molho, 2 salsichas, milho, batata palha, bacon, ketchup, maionese e vinagrete.</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">➕ Adicionais</button>
+        </div>
+      </article>
+
       <article class="card" data-type="hotdog" data-id="PADANA" data-name="PADANÁ" data-price="15.00">
         <h3>PADANÁ <span class="badge">Com Molho Verde 🌿</span></h3>
         <div class="price">R$ 15,00</div>
         <p>Pão, molho, 2 salsichas, milho, batata palha, bacon, vinagrete, mussarela, ketchup e maionese.</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">➕ Adicionais</button>
+        </div>
+      </article>
+
+      <article class="card" data-type="hotdog" data-id="PURIZIM" data-name="PURIZIM" data-price="14.00">
+        <h3>PURIZIM <span class="badge">Com Molho Verde 🌿</span></h3>
+        <div class="price">R$ 14,00</div>
+        <p>Pão, molho, milho, purê de batata cremoso, 1 salsicha, batata palha, ketchup e maionese.</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">➕ Adicionais</button>
@@ -177,68 +305,7 @@
     </div>
   </section>
 
-  <!-- ======================== -->
-  <!-- Bebidas -->
-  <!-- ======================== -->
-  <section class="menu-section">
-    <h2>Bebidas & Refrigerantes</h2>
-    <div class="grid">
-      <article class="card" data-type="beverage" data-id="coca200" data-name="Coca-Cola 200ml" data-price="4.00">
-        <h3>Coca-Cola 200ml</h3>
-        <div class="price">R$ 4,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-
-      <article class="card" data-type="beverage" data-id="aguaG" data-name="Água com Gás" data-price="4.00">
-        <h3>Água com Gás</h3>
-        <div class="price">R$ 4,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-
-      <article class="card" data-type="beverage" data-id="coca310" data-name="Coca-Cola 310ml" data-price="5.00">
-        <h3>Coca-Cola 310ml</h3>
-        <div class="price">R$ 5,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-
-      <article class="card" data-type="beverage" data-id="fanta1l" data-name="Fanta Laranja 1L" data-price="8.00">
-        <h3>Fanta Laranja 1L</h3>
-        <div class="price">R$ 8,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-
-      <article class="card" data-type="beverage" data-id="coca2l" data-name="Coca-Cola 2L" data-price="13.00">
-        <h3>Coca-Cola 2L</h3>
-        <div class="price">R$ 13,00</div>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </article>
-    </div>
-  </section>
-
-  <!-- ======================== -->
-  <!-- Carrinho Lateral -->
-  <!-- ======================== -->
-  <aside id="mini-cart" class="mini-cart">
-    <div class="mini-head">
-      <h3>🛒 Seu Pedido</h3>
-      <button id="close-cart" aria-label="Fechar Carrinho">✕</button>
-    </div>
-
-    <div id="cart-items" class="mini-list">
-      <p>Seu carrinho está vazio 😔</p>
-    </div>
-
-    <div class="mini-foot">
-      <button id="finalize-order" class="btn-primary">Fechar Pedido</button>
-      <button id="clear-cart" class="btn-secondary">Limpar</button>
-    </div>
-  </aside>
-
-  <div id="cart-backdrop"></div>
-
-<!-- ======================== -->
   <!-- Painel “Meus Pedidos” -->
-  <!-- ======================== -->
   <aside id="orders-panel" class="orders-panel" aria-hidden="true">
     <header class="orders-head">
       <h3>📜 Meus Pedidos</h3>
@@ -249,40 +316,56 @@
     </div>
   </aside>
 
-  <!-- ======================== -->
-  <!-- MAPA -->
-  <!-- ======================== -->
-  <h2 class="mapa-titulo">🚗 Entregamos em toda Patos de Minas 💛</h2>
-  <div id="mapa-entregas"
-       style="height:300px;width:100%;border-radius:12px;margin:20px auto;border:2px solid #f9d44b;">
-  </div>
+  <!-- Carrinho lateral -->
+  <div id="cart-backdrop"></div>
+  <aside id="mini-cart" aria-hidden="true">
+    <header class="mini-head">
+      <h3>Seu Pedido</h3>
+      <button class="mini-close" aria-label="Fechar">✕</button>
+    </header>
+    <div id="mini-list" class="mini-list"></div>
+    <footer class="mini-foot">
+      <button id="mini-clear" class="btn-secondary">Limpar carrinho</button>
+      <button id="mini-checkout" class="btn-primary">Fechar pedido</button>
+    </footer>
+  </aside>
 
-  <!-- ======================== -->
-  <!-- RODAPÉ -->
-  <!-- ======================== -->
+  <!-- Modal de Adicionais -->
+  <div id="extras-backdrop"></div>
+  <aside id="extras-modal" aria-hidden="true">
+    <header class="extras-head">
+      <h3 id="extras-title">Adicionais</h3>
+      <button class="extras-close" aria-label="Fechar">✕</button>
+    </header>
+    <div id="extras-list" class="extras-list"></div>
+    <footer class="extras-foot">
+      <button id="extras-cancel" class="btn-secondary">Cancelar</button>
+      <button id="extras-add" class="btn-primary">Adicionar ao carrinho</button>
+    </footer>
+  </aside>
+
+  <!-- Mapa -->
+  <h2 class="mapa-titulo">🚗 Entregamos em toda Patos de Minas 💛</h2>
+  <div id="mapa-entregas" style="height:300px;width:100%;border-radius:12px;margin:20px auto;border:2px solid #f9d44b;"></div>
+
+  <!-- Rodapé -->
   <footer class="footer">
     <h2>Onde estamos</h2>
     <p>Patos de Minas — Atendimento delivery e retirada.</p>
-    <a class="map-link"
-       href="https://maps.app.goo.gl/jQ1cYcmuZm8rU5Dk9"
-       target="_blank">📍 Abrir no Google Maps</a>
-
+    <a class="map-link" href="https://maps.app.goo.gl/jQ1cYcmuZm8rU5Dk9" target="_blank">📍 Abrir no Google Maps</a>
     <p class="social-line">
       📸 <a href="https://www.instagram.com/dafamilia_patos" target="_blank">@dafamilia_patos</a> ·
       🛒 <a href="https://www.ifood.com.br/delivery/patos-de-minas-mg/da-familia-lanches-caramuru/9aadff75-b014-4e7f-a9b4-b3e478e38af8" target="_blank">iFood</a> ·
       💬 <a href="https://wa.me/5534997178336" target="_blank">WhatsApp</a>
     </p>
-
     <p class="copy">© 2025 Da Família Lanches — Você faz parte disso!</p>
   </footer>
 
-  <!-- ======================== -->
   <!-- Script do mapa -->
-  <!-- ======================== -->
   <script>
-  (function() {
+  (function(){
     const el = document.getElementById('mapa-entregas');
-    if (!el) return;
+    if(!el) return;
 
     const map = L.map('mapa-entregas', {
       center: [-18.5783, -46.5187],
@@ -290,9 +373,7 @@
       scrollWheelZoom: true
     });
 
-    L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png')
-      .addTo(map);
-
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png').addTo(map);
     L.circle([-18.5783, -46.5187], {
       radius: 6000,
       color: '#d4af37',
@@ -300,7 +381,6 @@
       fillOpacity: 0.25,
       weight: 2
     }).addTo(map);
-
     L.marker([-18.5783, -46.5187])
       .addTo(map)
       .bindPopup("<b>🍔 DFL</b><br>Entregamos em toda Patos de Minas 💛")
