--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Da Família Lanches 🍔</title>
 
-  <!-- Ícone e CSS -->
   <link rel="icon" href="favicon.png" />
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Firebase v8 -->
+  <!-- Firebase (login Google) -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
@@ -18,7 +17,6 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  <!-- Script principal -->
   <script defer src="script.js"></script>
 </head>
 
@@ -37,7 +35,7 @@
     </div>
   </header>
 
-  <!-- Banner de status -->
+  <!-- Status -->
   <div id="status-banner" class="status-banner">Verificando horário...</div>
 
   <div class="hours-banner">
@@ -46,7 +44,7 @@
     <span>Ter <b>Fechado</b></span>
   </div>
 
-  <!-- Seção Promoções -->
+  <!-- Promoções -->
   <section class="promo-section">
     <h2>🔥 Promoções do Dia</h2>
     <p class="promo-sub">Válidas até 23h59 ou enquanto durarem os estoques</p>
@@ -57,14 +55,11 @@
     <div id="promoCarousel" class="carousel">
       <button class="c-btn c-prev">◀</button>
       <div class="slides">
-        <img class="slide" src="promo1.jpg" alt="Promo 1" />
-        <img class="slide" src="promo2.jpg" alt="Promo 2" />
-        <img class="slide" src="promo3.jpg" alt="Promo 3" />
-        <img class="slide" src="promo4.jpg" alt="Promo 4" />
-        <img class="slide" src="promo5.jpg" alt="Promo 5" />
-        <img class="slide" src="promo6.jpg" alt="Promo 6" />
-        <img class="slide" src="promo7.jpg" alt="Promo 7" />
-        <img class="slide" src="promo8.jpg" alt="Promo 8" />
+        <img class="slide" src="promo1.jpg" alt="Promo 1" data-wa="Quero a promoção 1 do site DFL!" />
+        <img class="slide" src="promo2.jpg" alt="Promo 2" data-wa="Quero a promoção 2 do site DFL!" />
+        <img class="slide" src="promo3.jpg" alt="Promo 3" data-wa="Quero a promoção 3 do site DFL!" />
+        <img class="slide" src="promo4.jpg" alt="Promo 4" data-wa="Quero a promoção 4 do site DFL!" />
+        <img class="slide" src="promo5.jpg" alt="Promo 5" data-wa="Quero a promoção 5 do site DFL!" />
       </div>
       <button class="c-btn c-next">▶</button>
     </div>
@@ -115,7 +110,7 @@
           <button class="extras-btn">Adicionais</button>
         </div>
       </article>
-</div>
+    </div>
   </section>
 
   <!-- ======================= -->
@@ -155,8 +150,7 @@
       </article>
     </div>
   </section>
-
-  <!-- ======================= -->
+<!-- ======================= -->
   <!-- Combos -->
   <!-- ======================= -->
   <section class="menu-section">
@@ -201,7 +195,7 @@
       <article class="card" data-id="NIGUCIM" data-name="Nigucim" data-price="10.00">
         <h3>Nigucim</h3>
         <div class="price">R$ 10,00</div>
-        <p>Pão, molho, salsicha (Sadia / Perdigão), milho, batata palha, ketchup e maionese.</p>
+        <p>Pão, molho, salsicha, milho, batata palha, ketchup e maionese.</p>
         <div class="actions"><button class="add-cart">Adicionar</button></div>
       </article>
 
@@ -239,60 +233,56 @@
   <!-- Bebidas -->
   <!-- ======================= -->
   <section class="menu-section">
-    <h2>🥤 Bebidas e Refrigerantes</h2>
+    <h2>🥤 Bebidas</h2>
     <div class="grid">
-      <article class="card" data-id="coca200" data-name="Coca-Cola 200 ml" data-price="4.00"><h3>Coca-Cola 200 ml</h3><div class="price">R$ 4,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
-      <article class="card" data-id="coca1l" data-name="Coca-Cola 1 L" data-price="9.00"><h3>Coca-Cola 1 L</h3><div class="price">R$ 9,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
-      <article class="card" data-id="coca2l" data-name="Coca-Cola 2 L" data-price="13.00"><h3>Coca-Cola 2 L</h3><div class="price">R$ 13,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
-      <article class="card" data-id="kuat2l" data-name="Kuat Guaraná 2 L" data-price="10.00"><h3>Kuat Guaraná 2 L</h3><div class="price">R$ 10,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-id="COCA200" data-name="Coca 200ml" data-price="4.00"><h3>Coca 200ml</h3><div class="price">R$ 4,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-id="AGUAGAS" data-name="Água com Gás" data-price="3.00"><h3>Água com Gás</h3><div class="price">R$ 3,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-id="COCALATA" data-name="Coca Lata 310ml" data-price="5.00"><h3>Coca Lata 310ml</h3><div class="price">R$ 5,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-id="COCAZERO" data-name="Coca Lata 310ml Zero" data-price="5.00"><h3>Coca Lata 310ml Zero</h3><div class="price">R$ 5,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-id="UV450" data-name="Del Valle Uva 450ml" data-price="5.00"><h3>Del Valle Uva 450ml</h3><div class="price">R$ 5,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-id="LAR450" data-name="Del Valle Laranja 450ml" data-price="5.00"><h3>Del Valle Laranja 450ml</h3><div class="price">R$ 5,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-id="FANTA1L" data-name="Fanta Laranja 1L" data-price="8.00"><h3>Fanta Laranja 1L</h3><div class="price">R$ 8,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-id="COCA1L" data-name="Coca-Cola 1L" data-price="9.00"><h3>Coca-Cola 1L</h3><div class="price">R$ 9,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-id="COCA1LZERO" data-name="Coca-Cola 1L Zero" data-price="9.00"><h3>Coca-Cola 1L Zero</h3><div class="price">R$ 9,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-id="KUAT2L" data-name="Kuat 2L" data-price="10.00"><h3>Kuat 2L</h3><div class="price">R$ 10,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
+      <article class="card" data-id="COCA2L" data-name="Coca-Cola 2L" data-price="13.00"><h3>Coca-Cola 2L</h3><div class="price">R$ 13,00</div><div class="actions"><button class="add-cart">Adicionar</button></div></article>
     </div>
   </section>
-<!-- ======================= -->
-  <!-- Painel “Meus Pedidos” -->
-  <!-- ======================= -->
-  <aside id="orders-panel" class="orders-panel">
-    <header class="orders-head">
-      <h3>📜 Meus Pedidos</h3>
-      <button class="orders-close">✕</button>
-    </header>
-    <div id="orders-content" class="orders-content">
-      <p class="empty-orders">Nenhum pedido encontrado.</p>
-    </div>
-  </aside>
-
-  <!-- ======================= -->
-  <!-- Carrinho lateral -->
-  <!-- ======================= -->
-  <div id="cart-backdrop"></div>
-  <aside id="mini-cart" class="mini-cart">
-    <header class="mini-head">
-      <h3>🛍️ Seu Pedido</h3>
-      <button class="mini-close">✕</button>
-    </header>
-    <div id="mini-list" class="mini-list">
-      <p class="empty-cart">Seu carrinho está vazio.</p>
-    </div>
-    <footer class="mini-foot">
-      <button id="mini-clear" class="btn-secondary">Limpar</button>
-      <button id="mini-checkout" class="btn-primary">Fechar pedido</button>
-    </footer>
-  </aside>
 
   <!-- ======================= -->
   <!-- Modal de Adicionais -->
   <!-- ======================= -->
-  <div id="extras-backdrop"></div>
   <aside id="extras-modal">
     <header class="extras-head">
       <h3>Adicionais</h3>
       <button class="extras-close">✕</button>
     </header>
-    <div id="extras-list" class="extras-list"></div>
+    <div class="extras-list" id="extras-list"></div>
     <footer class="extras-foot">
-      <button id="extras-cancel" class="btn-secondary">Cancelar</button>
+      <button class="btn-secondary extras-close">Cancelar</button>
       <button id="extras-add" class="btn-primary">Adicionar</button>
     </footer>
   </aside>
+
+  <!-- ======================= -->
+  <!-- Modal de Login -->
+  <!-- ======================= -->
+  <div id="login-modal">
+    <div class="login-box">
+      <button class="login-x">✕</button>
+      <h3>Bem-vindo(a) 👋</h3>
+      <p>Entre ou cadastre-se para acompanhar seus pedidos</p>
+      <form class="login-form">
+        <input type="email" placeholder="E-mail" required>
+        <input type="password" placeholder="Senha" required>
+        <button type="submit" class="btn-primario">Entrar</button>
+      </form>
+      <div class="divider">ou</div>
+      <button class="btn-google">
+        <img src="google-icon.png" alt="Google"> Entrar com Google
+      </button>
+    </div>
+  </div>
 
   <!-- ======================= -->
   <!-- Mapa -->
@@ -317,29 +307,26 @@
     <p class="copy">© 2025 Da Família Lanches — Você faz parte disso! 💛</p>
   </footer>
 
-  <!-- ======================= -->
-  <!-- Script do Mapa -->
-  <!-- ======================= -->
+  <!-- Script do mapa -->
   <script>
-  (function() {
-    const el = document.getElementById('mapa-entregas');
-    if (!el) return;
-    const map = L.map('mapa-entregas', {
-      center: [-18.5783, -46.5187],
-      zoom: 13
-    });
-    L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png')
-      .addTo(map);
-    L.circle([-18.5783, -46.5187], {
-      radius: 6000,
-      color: '#d4af37',
-      fillColor: '#ffd700',
-      fillOpacity: 0.25
-    }).addTo(map);
-    L.marker([-18.5783, -46.5187])
-      .addTo(map)
-      .bindPopup("<b>🍔 DFL</b><br>Entregamos em toda Patos de Minas");
-  })();
+    (function() {
+      const el = document.getElementById('mapa-entregas');
+      if (!el) return;
+      const map = L.map('mapa-entregas', {
+        center: [-18.5783, -46.5187],
+        zoom: 13
+      });
+      L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png').addTo(map);
+      L.circle([-18.5783, -46.5187], {
+        radius: 6000,
+        color: '#d4af37',
+        fillColor: '#ffd700',
+        fillOpacity: 0.25
+      }).addTo(map);
+      L.marker([-18.5783, -46.5187])
+        .addTo(map)
+        .bindPopup("<b>🍔 DFL</b><br>Entregamos em toda Patos de Minas");
+    })();
   </script>
 </body>
 </html>
