--- a/index.html
+++ b/index.html
@@ -1,254 +1,268 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Da Família Lanches 🍔</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>🍔 Da Família Lanches</title>
 
-  <!-- Firebase v8 -->
+  <!-- Ícones e fontes -->
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="logo.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
+
 <body>
-
-  <!-- 🔺 Header -->
+  <!-- Cabeçalho -->
   <header class="header">
-    <div class="logo-area">
-      <img src="logo.png" alt="DFL" class="logo">
-      <h1>Da Família Lanches</h1>
-      <p>O sabor que une a família 🍔</p>
-    </div>
-
-    <div class="cart-area">
-      <button id="cart-icon">🛒 <span id="cart-count">0</span></button>
+    <div class="header-content">
+      <img src="logo.png" alt="Logo DFL" class="logo" />
+      <div class="header-info">
+        <h1>Da Família Lanches</h1>
+        <p class="tagline">Aqui o sabor é de casa ❤️🍔</p>
+      </div>
     </div>
   </header>
 
-  <!-- 🔹 Status -->
-  <section id="status-banner" class="status-banner">Carregando status...</section>
+  <!-- Ícone do carrinho -->
+  <button id="cart-icon">
+    🛒 Carrinho <span id="cart-count">0</span>
+  </button>
 
-  <!-- 🔹 Info horários -->
-  <section class="info-horarios">
-    <p>🕒 Seg–Qui <b>18h–23h15</b> • Sex–Dom <b>17h30–23h30</b> • Ter <b>Fechado</b></p>
-  </section>
+  <!-- Status -->
+  <div id="status-banner" class="status-banner">Carregando status...</div>
+  <div class="hours-banner">
+    <span>⏰ Seg–Qui 18h às 23h15 | Sex–Dom 17h30 às 23h30 | Ter fechado</span>
+  </div>
 
-  <!-- 🔹 Promoções -->
-  <section class="promocoes">
-    <h2>🔥 Promoções do Dia</h2>
-    <p>Válidas até 23h59 ou enquanto durarem os estoques</p>
-    <p>⏳ Termina em: <span id="timer">00:00:00</span></p>
+  <!-- Promoção do dia -->
+  <section class="promo-section">
+    <h2>🔥 Promoção do Dia</h2>
+    <p class="promo-sub">Aproveite antes que acabe!</p>
+    <div id="timer" class="countdown-ticker">00:00:00</div>
 
+    <!-- Carrossel -->
     <div class="carousel">
-      <button class="c-prev">◀</button>
+      <button class="c-btn c-prev">◀</button>
       <div class="slides">
-        <img class="slide" src="promo1.jpg" data-wa="Quero a promoção 1" alt="">
-        <img class="slide" src="promo2.jpg" data-wa="Quero a promoção 2" alt="">
-        <img class="slide" src="promo3.jpg" data-wa="Quero a promoção 3" alt="">
+        <img src="promo1.jpg" class="slide" data-wa="Quero aproveitar a Promo 1 🍔" alt="Promoção 1" />
+        <img src="promo2.jpg" class="slide" data-wa="Quero aproveitar a Promo 2 🔥" alt="Promoção 2" />
+        <img src="promo3.jpg" class="slide" data-wa="Quero aproveitar a Promo 3 😋" alt="Promoção 3" />
       </div>
-      <button class="c-next">▶</button>
+      <button class="c-btn c-next">▶</button>
     </div>
   </section>
 
-  <!-- 🔹 Produtos -->
-  <main class="produtos">
-    <h2>🍔 Hambúrgueres Tradicionais</h2>
-    <div class="cards">
-
-      <div class="card" data-name="BÃO Com Molho Verde" data-price="11">
-        <h3>BÃO</h3>
-        <span class="etiqueta">Com Molho Verde</span>
-        <p>Pão, alface, tomate, hambúrguer, presunto e mussarela.</p>
-        <button class="add-cart">Adicionar</button>
-        <button class="extras-btn">Adicionais</button>
-      </div>
-
-      <div class="card" data-name="UAI Com Molho Verde" data-price="13">
-        <h3>UAI</h3>
-        <span class="etiqueta">Com Molho Verde</span>
-        <p>Pão, alface, tomate, bacon, hambúrguer, presunto e mussarela.</p>
-        <button class="add-cart">Adicionar</button>
-        <button class="extras-btn">Adicionais</button>
-      </div>
-
-      <div class="card" data-name="TREM Com Molho Verde" data-price="14">
-        <h3>TREM</h3>
-        <span class="etiqueta">Com Molho Verde</span>
-        <p>Pão, alface, tomate, milho, hambúrguer, presunto e mussarela.</p>
-        <button class="add-cart">Adicionar</button>
-        <button class="extras-btn">Adicionais</button>
-      </div>
-
-      <div class="card" data-name="CADIM Com Molho Verde" data-price="17">
-        <h3>CADIM</h3>
-        <span class="etiqueta">Com Molho Verde</span>
-        <p>Pão, alface, tomate, milho, bacon, hambúrguer e mussarela.</p>
-        <button class="add-cart">Adicionar</button>
-        <button class="extras-btn">Adicionais</button>
-      </div>
-
-    </div>
-  </main>
-<!-- 🥤 Bebidas -->
+  <!-- Cardápio – Tradicionais -->
   <section class="menu-section">
-    <h2>🥤 Bebidas e Refrigerantes</h2>
+    <h2>🍔 Tradicionais</h2>
     <div class="grid">
-      <article class="card" data-name="Coca-Cola 200ml" data-price="4.00">
-        <h3>Coca-Cola 200ml</h3><button class="add-cart">Adicionar</button>
-      </article>
+      <div class="card" data-id="b1" data-name="Bão" data-price="15.00">
+        <h3>Bão <span class="badge">Molho Verde</span></h3>
+        <p class="price">R$ 15,00</p>
+        <p>Pão, Hambúrguer 56 g, Queijo, Molho Verde</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
+      </div>
 
-      <article class="card" data-name="Água com Gás" data-price="3.00">
-        <h3>Água com Gás</h3><button class="add-cart">Adicionar</button>
-      </article>
+      <div class="card" data-id="b2" data-name="Uai" data-price="17.00">
+        <h3>Uai <span class="badge">Molho da Casa</span></h3>
+        <p class="price">R$ 17,00</p>
+        <p>Pão, Hambúrguer 56 g, Queijo, Presunto, Molho da Casa</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
+      </div>
 
-      <article class="card" data-name="Coca-Cola Lata 310ml" data-price="5.00">
-        <h3>Coca-Cola 310ml</h3><button class="add-cart">Adicionar</button>
-      </article>
+      <div class="card" data-id="b3" data-name="Trem" data-price="18.00">
+        <h3>Trem <span class="badge">Com Bacon</span></h3>
+        <p class="price">R$ 18,00</p>
+        <p>Pão, Hambúrguer 56 g, Bacon, Queijo, Milho, Molho da Casa</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
+      </div>
+    </div>
+  </section>
+<!-- Cardápio – Artesanais -->
+  <section class="menu-section">
+    <h2>🍔 Artesanais</h2>
+    <div class="grid">
+      <div class="card" data-id="a1" data-name="Peleja" data-price="24.00">
+        <h3>Peleja <span class="badge">Com Queijo Cheddar</span></h3>
+        <p class="price">R$ 24,00</p>
+        <p>Pão brioche, Hambúrguer 120 g, Queijo cheddar cremoso, Molho da casa</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
+      </div>
 
-      <article class="card" data-name="Coca-Cola Zero 310ml" data-price="5.00">
-        <h3>Coca-Cola 310ml Zero</h3><button class="add-cart">Adicionar</button>
-      </article>
+      <div class="card" data-id="a2" data-name="Tudibom" data-price="27.00">
+        <h3>Tudibom <span class="badge">Completo</span></h3>
+        <p class="price">R$ 27,00</p>
+        <p>Pão brioche, Hambúrguer 120 g, Bacon, Ovo, Queijo, Molho verde</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
+      </div>
 
-      <article class="card" data-name="Del Valle Uva 450ml" data-price="5.00">
-        <h3>Del Valle Uva 450ml</h3><button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-name="Del Valle Laranja 450ml" data-price="5.00">
-        <h3>Del Valle Laranja 450ml</h3><button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-name="Fanta Laranja 1L" data-price="8.00">
-        <h3>Fanta Laranja 1L</h3><button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-name="Coca-Cola 1L" data-price="9.00">
-        <h3>Coca-Cola 1L</h3><button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-name="Coca-Cola 1L Zero" data-price="9.00">
-        <h3>Coca-Cola 1L Zero</h3><button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-name="Kuat 2L" data-price="10.00">
-        <h3>Kuat 2L</h3><button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-name="Coca-Cola 2L" data-price="13.00">
-        <h3>Coca-Cola 2L</h3><button class="add-cart">Adicionar</button>
-      </article>
+      <div class="card" data-id="a3" data-name="Custoso" data-price="30.00">
+        <h3>Custoso <span class="badge">Duplo Bacon</span></h3>
+        <p class="price">R$ 30,00</p>
+        <p>Pão brioche, 2 Hambúrgueres 120 g, Duplo bacon, Queijo, Molho especial</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- 🛍️ Mini-Carrinho -->
+  <!-- Bebidas -->
+  <section class="menu-section">
+    <h2>🥤 Bebidas</h2>
+    <div class="grid">
+      <div class="card" data-id="r1" data-name="Coca-Cola 200ml" data-price="4.00">
+        <h3>Coca-Cola 200ml</h3>
+        <p class="price">R$ 4,00</p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+
+      <div class="card" data-id="r2" data-name="Água com Gás" data-price="3.00">
+        <h3>Água com Gás</h3>
+        <p class="price">R$ 3,00</p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+
+      <div class="card" data-id="r3" data-name="Coca Lata 310ml" data-price="5.00">
+        <h3>Coca Lata 310ml</h3>
+        <p class="price">R$ 5,00</p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+
+      <div class="card" data-id="r4" data-name="Coca Lata Zero 310ml" data-price="5.00">
+        <h3>Coca Lata Zero 310ml</h3>
+        <p class="price">R$ 5,00</p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+
+      <div class="card" data-id="r5" data-name="Del Valle Uva 450ml" data-price="5.00">
+        <h3>Del Valle Uva 450ml</h3>
+        <p class="price">R$ 5,00</p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+
+      <div class="card" data-id="r6" data-name="Del Valle Laranja 450ml" data-price="5.00">
+        <h3>Del Valle Laranja 450ml</h3>
+        <p class="price">R$ 5,00</p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+
+      <div class="card" data-id="r7" data-name="Fanta Laranja 1L" data-price="8.00">
+        <h3>Fanta Laranja 1L</h3>
+        <p class="price">R$ 8,00</p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+
+      <div class="card" data-id="r8" data-name="Coca-Cola 1L" data-price="9.00">
+        <h3>Coca-Cola 1L</h3>
+        <p class="price">R$ 9,00</p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+
+      <div class="card" data-id="r9" data-name="Coca-Cola Zero 1L" data-price="9.00">
+        <h3>Coca-Cola 1L Zero</h3>
+        <p class="price">R$ 9,00</p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+
+      <div class="card" data-id="r10" data-name="Kuat 2L" data-price="10.00">
+        <h3>Kuat 2L</h3>
+        <p class="price">R$ 10,00</p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+
+      <div class="card" data-id="r11" data-name="Coca-Cola 2L" data-price="13.00">
+        <h3>Coca-Cola 2L</h3>
+        <p class="price">R$ 13,00</p>
+        <div class="actions"><button class="add-cart">Adicionar</button></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Mini Carrinho -->
   <div id="cart-backdrop"></div>
   <aside id="mini-cart" class="mini-cart">
-    <header class="mini-head">
-      <h3>🛒 Seu Pedido</h3>
+    <div class="mini-head">
+      <h3>Seu Pedido</h3>
       <button class="mini-close">✕</button>
-    </header>
-    <div id="mini-list" class="mini-list">
-      <p class="empty-cart">Seu carrinho está vazio.</p>
     </div>
-    <footer class="mini-foot">
-      <button id="mini-clear" class="btn-secondary">Limpar</button>
-      <button id="mini-checkout" class="btn-primary">Fechar pedido</button>
-    </footer>
+    <div class="mini-list"></div>
+    <div class="mini-foot">
+      <button id="btnClearCart" class="btn-secondary">Limpar</button>
+      <button id="btnCloseOrder" class="btn-primary">Fechar pedido</button>
+    </div>
   </aside>
 
-  <!-- ➕ Modal de Adicionais -->
-  <div id="extras-backdrop"></div>
-  <aside id="extras-modal">
-    <header class="extras-head">
-      <h3>Adicionais</h3>
+  <!-- Modal de Adicionais -->
+  <div id="extras-modal">
+    <div class="extras-head">
+      <span>Escolha seus adicionais</span>
       <button class="extras-close">✕</button>
-    </header>
-    <div id="extras-list" class="extras-list">
-      <!-- preenchido pelo JS -->
     </div>
-    <footer class="extras-foot">
-      <button id="extras-cancel" class="btn-secondary extras-close">Cancelar</button>
+    <div class="extras-list" id="extras-list">
+      <!-- os adicionais são carregados via JS -->
+    </div>
+    <div class="extras-foot">
+      <button class="btn-secondary extras-close">Cancelar</button>
       <button id="extras-add" class="btn-primary">Adicionar</button>
-    </footer>
-  </aside>
-<!-- 📜 Painel “Meus Pedidos” -->
-  <aside id="orders-panel" class="orders-panel">
-    <header class="orders-head">
-      <h3>📜 Meus Pedidos</h3>
-      <button class="orders-close">✕</button>
-    </header>
-    <div id="orders-content" class="orders-content">
-      <p class="empty-orders">Nenhum pedido encontrado.</p>
     </div>
-  </aside>
-
-  <!-- ⚙️ Modal de Login (criado via JS se não existir) -->
+  </div>
+<!-- Modal de Login -->
   <div id="login-modal">
-    <div class="login-backdrop"></div>
     <div class="login-box">
       <button class="login-x">✕</button>
-      <h3>Entrar / Cadastro</h3>
-      <p>Acesse sua conta para acompanhar seus pedidos</p>
-      <form id="email-form" class="login-form">
-        <input id="login-email" type="email" placeholder="Seu e-mail" required />
-        <input id="login-pass" type="password" placeholder="Sua senha" required />
-        <button id="email-submit" class="btn-primario" type="submit">Entrar</button>
-        <small id="email-toggle" style="display:block;margin-top:6px;cursor:pointer;">
-          Ainda não tem conta? <b>Criar cadastro</b>
-        </small>
+      <h3>Entrar ou Cadastrar</h3>
+      <p>Faça login para salvar seus pedidos e acompanhar o histórico 🍔</p>
+
+      <form class="login-form" onsubmit="return false;">
+        <input type="email" id="login-email" placeholder="E-mail" required />
+        <input type="password" id="login-senha" placeholder="Senha" required />
+        <button type="button" class="btn-primario">Entrar / Cadastrar</button>
       </form>
+
       <div class="divider">ou</div>
-      <button class="btn-google" id="btn-google">
-        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google">
+
+      <button class="btn-google">
+        <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google">
         Entrar com Google
       </button>
     </div>
   </div>
 
-  <!-- 📍 Mapa de Entregas -->
-  <h2 class="mapa-titulo">🚗 Entregamos em toda Patos de Minas</h2>
-  <div id="mapa-entregas"
-       style="height:300px;width:100%;border-radius:12px;margin:20px auto;border:2px solid #f9d44b;">
-  </div>
-
-  <!-- 📍 Script do Mapa -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script>
-    (function() {
-      const el = document.getElementById('mapa-entregas');
-      if (!el) return;
-      const map = L.map('mapa-entregas', {
-        center: [-18.5783, -46.5187],
-        zoom: 13
-      });
-      L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png')
-        .addTo(map);
-      L.circle([-18.5783, -46.5187], {
-        radius: 6000,
-        color: '#d4af37',
-        fillColor: '#ffd700',
-        fillOpacity: 0.25
-      }).addTo(map);
-      L.marker([-18.5783, -46.5187])
-        .addTo(map)
-        .bindPopup("<b>🍔 DFL</b><br>Entregamos em toda Patos de Minas");
-    })();
-  </script>
-
-  <!-- 🧭 Rodapé -->
+  <!-- Rodapé -->
   <footer class="footer">
-    <h2>Onde estamos</h2>
-    <p>📍 Patos de Minas — Delivery e retirada</p>
-    <a href="https://maps.app.goo.gl/jQ1cYcmuZm8rU5Dk9" target="_blank">Ver no Google Maps</a>
-    <p class="social-line">
-      📸 <a href="https://www.instagram.com/dafamilia_patos" target="_blank">@dafamilia_patos</a> ·
-      💬 <a href="https://wa.me/5534997178336" target="_blank">WhatsApp</a> ·
-      🛒 <a href="https://www.ifood.com.br/delivery/patos-de-minas-mg/da-familia-lanches-caramuru/9aadff75-b014-4e7f-a9b4-b3e478e38af8" target="_blank">iFood</a>
+    <p>
+      📍 Rua dos Sabores, 123 – Patos de Minas<br>
+      Atendimento via WhatsApp:
+      <a href="https://wa.me/5534997178336" target="_blank">34 99717-8336</a>
     </p>
-    <p class="copy">© 2025 Da Família Lanches — Você faz parte disso! 💛</p>
+    <p class="copy">
+      © 2025 Da Família Lanches – Todos os direitos reservados.
+    </p>
   </footer>
 
-  <!-- 🔗 Script principal -->
-  <script defer src="script.js"></script>
+  <!-- Script principal -->
+  <script src="script.js"></script>
 </body>
 </html>
